fix: consistent spacing betweens lists and pargraphs

--- a/public/styles/blog.css
+++ b/public/styles/blog.css
@@ -1,8 +1,4 @@
 /* POST ONLY  */
-.post-container ol {
-  list-style: list-item;
-  line-height: 1.3;
-}
 
 .post-container li {
   margin-bottom: 1em;
@@ -29,6 +25,7 @@
 .post-container h2 { margin-top: 2.25em; margin-bottom: 1em; }
 .post-container p, .post-container ol, .post-container ul {
   margin-bottom: 1.5em;
+  line-height: 1.5;
 }
 .post-container img { 
     width: 100%;
